# rust-dns

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  massif.out.39516
.github/workflows/: tests.yml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml  config.sample.yml
daemon/src/: config.rs  error.rs  main.rs  metrics.rs  server.rs  stats.rs
exec/: Cargo.toml
exec/src/: config.rs  main.rs
proto/: Cargo.toml
proto/src/: dns.rs  error.rs  helper.rs  lib.rs  qclass.rs  qtype.rs  reader.rs  writer.rs
proto/src/dns/: opcode.rs  rcode.rs
src/: helper.rs  lib.rs  main.rs  parser.rs  qclass.rs  qtype.rs
